<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/about" />
    <item
        android:id="@+id/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/help" />
    <item
        android:id="@+id/random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/random" />
    <item
        android:id="@+id/coins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/coins">
        <menu
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <item
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:title="@string/firstCoin" />
            <item
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="@string/secondCoin" />
            <item
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="@string/thirdCoin" />

        </menu>
    </item>
</menu>